<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="fill_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!-- Speed,Direction,Etc -->
        <TextView
            android:layout_width="wrap_content"
            android:minWidth="@dimen/min_live_width"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bearing"
            android:paddingRight="15dp"
            android:id="@+id/bearing" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bearing_sample"
            android:id="@+id/bearing_act"
           android:layout_toRightOf="@id/bearing"/>
        <TextView
            android:layout_width="wrap_content"
            android:minWidth="@dimen/min_live_width"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/speed_label"
            android:paddingRight="15dp"
            android:id="@+id/speed_label"
            android:layout_below="@id/bearing"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/speed_sample"
            android:id="@+id/speed_act"
            android:layout_below="@id/bearing"
            android:layout_toRightOf="@id/speed_label"/>
    </RelativeLayout>



    <View android:layout_height="fill_parent"
        android:layout_width="2px"

        android:background="#90909090"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/large_text"
            android:id="@+id/textView" />
    </RelativeLayout>
</LinearLayout>