<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="bottom"
    sothree:panelHeight="@dimen/slide_up_height"
    sothree:shadowHeight="4dp">
    <!-- Map Content -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <!-- Map Fragment -->
        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/map"
            tools:context=".ui.MapsActivity"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            tools:layout="@layout/abc_screen_simple" />
        <!--
                map:mapType="satellite"
        map:uiCompass="true"
        map:uiRotateGestures="true"
        map:uiScrollGestures="true"
        map:uiZoomControls="false"
        map:uiZoomGestures="true"
-->
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/remove_marker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/floating_menu"
            android:visibility="gone"
            fab:fab_title="@string/remove_marker"
            android:layout_marginStart="65dp" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/floating_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        fab:fab_addButtonColorNormal="@color/white"
        fab:fab_addButtonColorPressed="@color/white_pressed"
        fab:fab_addButtonPlusIconColor="@color/half_black"
        fab:fab_labelStyle="@style/menu_labels_style">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/record_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_record"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccentPressed"
            fab:fab_title="@string/action_record_points"

            />
        <com.getbase.floatingactionbutton.AddFloatingActionButton
            android:id="@+id/add_journey"
            style="@style/AppTheme"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/colorAccentPressed"
            fab:fab_title="@string/action_create_journey"
            />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>


     </RelativeLayout>

    <!-- Drawer Items -->
    <LinearLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
      <include
            android:id="@+id/optionbar"
            layout="@layout/option_bar"/>

        <LinearLayout
            android:id="@+id/nav_console"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">




            <View android:layout_height="fill_parent"
                android:layout_width="2px"

                android:background="#90909090"/>

        </LinearLayout>
       

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Journeys"
            android:textSize="16sp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/journeys_list"/>


        <!-- As the main content view, the view below consumes the entire
             space available using match_parent in both dimensions. -->
    </LinearLayout>


</com.sothree.slidinguppanel.SlidingUpPanelLayout>

